--- a/src/assets/Dish.css
+++ b/src/assets/Dish.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: 1rem 2rem;
+  grid-template-columns: 35 auto;
   grid-template-rows: 15rem auto;
   gap: 3rem;
 }
